<resources>
    <string name="app_name">SafeHero</string>
    <string name="name">이름</string>
    <string name="input_name">이름 입력</string>
    <string name="phone_num">휴대폰번호</string>
    <string name="input_phone_num">휴대폰번호 입력</string>
    <string name="send_num">인증 요청</string>
    <string name="next_step">다음단계</string>
    <string name="title_activity_add_parent">AddParentActivity</string>
    <string name="complete">완료하기</string>
    <string name="unuse_capcall">경찰 안심신고 비활성화</string>
    <string name="input_in_fifty">50자 내로 입력</string>
    <string name="send_message">전달 메시지</string>
    <string name="add_parent">보호자 추가</string>
    <string name="auth">본인 인증</string>

    <!-- BottomNavigation -->
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calling_info_message">전화를 받으면 녹음이 시작됩니다.</string>
    <string name="caller">엄마</string>
    <string name="phnoe_num">010-9876-5432</string>
    <string name="text_send_mesage">메시지 보내기</string>
    <string name="main_app_title">긴급</string>
    <string name="sendmessage">안심문자가 전송되었습니다.</string>
    <string name="message_content">[긴급알림] 홍길동님께 문제가 발생하였습니다.\n확인 즉시 통화를 시도하시고\n연락이 닿지 않을 경우 경찰에 신고하세요.</string>
    <string name="meswsage_receiver">엄마(2313), 남자친구(3132), 홍길동(1312)</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>
