<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup.ui.AddParentActivity">

    <include
            android:id="@+id/layout_app_bar"
            layout="@layout/app_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_app_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp">

        <androidx.core.widget.NestedScrollView
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ListView
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:listitem="@layout/item_list_view"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:textSize="14sp"
                    android:textColor="#111111"
                    android:background="@drawable/rectangle_gray_outline_background"
                    android:gravity="center"
                    android:text="@string/add_parent"/>


            <TextView
                    android:layout_marginTop="34dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#111111"
                    android:lineSpacingExtra="-1.5sp"
                    android:text="@string/send_message"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="132dp"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="#111111"
                    android:background="@drawable/rectangle_outline_gray_1dp"
                    android:lineSpacingExtra="-1.5sp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:hint="@string/input_in_fifty"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#7e7e7e"
                        android:lineSpacingExtra="0.5sp"
                        android:text="@string/unuse_capcall"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:text="@string/complete"
            android:background="@color/mainColor"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>