<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme"
        tools:context=".signup.ui.SignupActivity">
    <include
            android:id="@+id/layout_app_bar"
            layout="@layout/app_bar"/>
    <View
            android:id="@+id/view"
            android:background="@color/diver_color"
            android:layout_width="match_parent"
            android:layout_marginBottom="2dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_app_bar"
            android:layout_height="1dp"/>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#111111"
                android:lineSpacingExtra="5.5sp"
                android:text="@string/name"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:paddingTop="7.5dp"
                    android:paddingBottom="7.5dp"
                    android:paddingLeft="16dp"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:background="@drawable/rectangle_outline_gray_1dp"
                    android:textColor="#7e7e7e"
                    android:lineSpacingExtra="5sp"
                    android:hint="@string/input_name"/>

        <TextView
                android:layout_marginTop="16.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#111111"
                android:lineSpacingExtra="5.5sp"
                android:text="@string/phone_num"/>

        <LinearLayout
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                        android:layout_width="300dp"
                        android:layout_height="52dp"
                        android:background="@drawable/rectangle_outline_gray_1dp"
                        android:paddingTop="7.5dp"
                        android:paddingBottom="7.5dp"
                        android:singleLine="true"
                        android:paddingLeft="16dp"
                        android:layout_weight="0.8"
                        android:textSize="14sp"
                        android:textColor="#7e7e7e"
                        android:lineSpacingExtra="5sp"
                        android:hint="@string/input_phone_num"/>
                <Button
                        android:id="@+id/send_auth_num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/rectangle_gray_outline_background"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:layout_weight="0.2"
                        android:paddingLeft="4.5dp"
                        android:paddingBottom="7.5dp"
                        android:paddingRight="4.5dp"
                        android:textColor="#111111"
                        android:text="@string/send_num"/>


        </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="17dp"
                    android:id="@+id/layout_after_send_num"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#111111"
                        android:lineSpacingExtra="5.5sp"
                        android:text="인증번호"/>

                <EditText
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:paddingTop="7.5dp"
                        android:paddingBottom="7.5dp"
                        android:paddingLeft="16dp"
                        android:singleLine="true"
                        android:background="@drawable/rectangle_outline_gray_1dp"
                        android:textSize="14sp"
                        android:textColor="#7e7e7e"
                        android:lineSpacingExtra="5sp"
                        android:hint="인증번호 입력"/>

                <TextView
                        android:id="@+id/text_timer"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end"
                        android:text="3:00"
                        android:textSize="13sp"
                        android:textColor="@color/alert_color"
                        android:lineSpacingExtra="5sp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    <Button
            android:id="@+id/button_nextStep"
            android:text="@string/next_step"
            android:background="@color/unalbe"
            android:textSize="12.5sp"
            android:enabled="true"
            android:textColor="@color/unalbe_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>