<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".calling.CallingActivity"
        android:background="@color/calling_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Chronometer
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:background="@color/balck"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:lineSpacingExtra="8sp"
            android:gravity="center"
            android:text="@string/calling_info_message"
            android:layout_height="35dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/text_caller"
            android:text="@string/caller"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginTop="68.5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/text_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginTop="65.5dp"
            app:layout_constraintTop_toBottomOf="@+id/text_caller"
            android:text="@string/phnoe_num"/>

    <ImageView
            android:id="@+id/button_receive"
            android:background="@drawable/btn_call"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginEnd="19dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/text_send_message"/>

    <ImageView
            android:background="@drawable/img_right_indicator"
            android:layout_width="9dp"
            android:layout_height="16dp"
            android:id="@+id/imageView"
            app:layout_constraintLeft_toRightOf="@+id/button_receive"
            app:layout_constraintTop_toTopOf="@+id/button_receive"
            app:layout_constraintBottom_toBottomOf="@+id/button_receive" android:layout_marginLeft="19dp"/>

    <ImageView
            android:id="@+id/button_reject"
            android:background="@drawable/btn_end_call"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/text_send_message"/>

    <ImageView
            android:background="@drawable/img_right_indicator"
            android:layout_width="9dp"
            android:layout_height="16dp"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/button_reject"
            android:layout_marginEnd="19dp"
            app:layout_constraintTop_toTopOf="@+id/button_reject"
            app:layout_constraintBottom_toBottomOf="@+id/button_reject"/>


    <TextView
            android:id="@+id/text_send_message"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:gravity="center"
            android:background="@drawable/rounded_rectangle_topleft_topright"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_send_mesage" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
